Added ruby/rails vim plugins and tweaked some bins and aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,5 +41,8 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 
+# Clear the scrollback buffer
+bind -n C-k clear-history
+
 # Status bar
 source-file "${DOTFILES_LOCATION}/3rdparty/tmux-themepack/powerline/block/cyan.tmuxtheme"
